tests/error/func_arg_unknown.gw
// [contains] unknown type in
 function void my_func(unknown_type unknown_arg){}
